Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127564

qdoc: qhp group: selector does not work for groups without a \group page

XMLWordPrintable

    • a025fc1a6 (dev), 11f30385e (6.8)
    • DaVinci 100

      QDoc supports grouping items/pages with the \ingroup command, and lists of group members can be then generated e.g. with the \generatelist <group_name> command. This works even if the group is not documented with the \group command.

      Likewise, the qhp subproject definition in .qdocconf supports the group:group_name selector. But here, the selector works only if the group is documented, that is, a \group page exists for it.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes